projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-gateway/aws_configs/us-east-1/InternetGateways.json
{
 "InternetGateways": [
  {
   "Attachments": [
    {
     "State": "available",
     "VpcId": "vpc-05d56c7295fca139b"
    }
   ],
   "InternetGatewayId": "igw-0c8afe4471084ccba",
   "OwnerId": "554773406868",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing"
    }
   ]
  }
 ]
}
