projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-gateway/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-02e578d1a3e0ce403",
   "OwnerId": "554773406868",
   "Tags": [],
   "VpcId": "vpc-05d56c7295fca139b"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0a720af69253d8427",
     "NetworkAclId": "acl-086ba598bbf8e5d89",
     "SubnetId": "subnet-01e5f0945f6d6f47c"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0c41029252c8d68e7",
     "NetworkAclId": "acl-086ba598bbf8e5d89",
     "SubnetId": "subnet-04391f04b912d0a73"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-086ba598bbf8e5d89",
   "OwnerId": "554773406868",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing-general"
    }
   ],
   "VpcId": "vpc-05d56c7295fca139b"
  }
 ]
}
