projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-gateway/aws_configs/us-east-1/Vpcs.json
{
 "Vpcs": [
  {
   "CidrBlock": "10.1.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-0e1b1e4de04d379f1",
     "CidrBlock": "10.1.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-ac879bd7",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "554773406868",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing"
    }
   ],
   "VpcId": "vpc-05d56c7295fca139b"
  }
 ]
}
